<resources>
    <string name="app_name">Spotlight</string>
    <string name="welcome_title_1">Welcome to Spotlight!</string>
    <string name="welcome_title_2">Tailored Just for You</string>
    <string name="welcome_title_3">Relax and Enjoy</string>
    <string name="welcome_desc_1">Discover a world of fun and excitement. Whether you\’re into the latest movies, books, or new vacations, we\’ll help you find what you love.</string>
    <string name="welcome_desc_2">Answer a few questions, and we\’ll recommend the perfect movies, books,  and travel spots that match your interests. Enjoy personalized suggestions we made for you</string>
    <string name="welcome_desc_3">Discover a world of fun and excitement. Whether you\’re into the latest  movies, concerts, or new hobbies, we\’ll help you find what you love.</string>
    <string name="get_started">Get Started</string>
    <string name="login_title">Log In</string>
    <string name="login_description">Ready to dive back into a world of fun and relaxation? Log in to continue discovering and scheduling your favorite entertainment</string>
    <string name="signup_description">Discover a world of entertainment tailored just for you. Sign up now to  explore new movies, books, and manage your stress levels for a  happier, more relaxed you</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="dont_have_account">Don\’t have an account?</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="or">or</string>
    <string name="continue_with_google">Continue With Google</string>
    <string name="signup_title">Sign Up</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="email_is_not_valid">Email is not valid</string>
    <string name="password_cannot_be_less_than_8_character">Password cannot be less than 8 character</string>
    <string name="welcome_back">Welcome back,</string>
    <string name="username">John Doe</string>
    <string name="survey_recommendation_title">Survey Time</string>
    <string name="survey_recommendation_description">Let\’s find the best entertainment and relaxation options that match your unique tastes!</string>
    <string name="book_first_question">Do you have a particular book title you want to read?</string>
    <string name="book_second_question">Are you looking for books by a specific author?</string>
    <string name="book_third_question">What types of stories or topics do you look for in books?</string>
    <string name="book_fourth_question">Do you have a minimum average rating preference for the book you are looking for?</string>
    <string name="book_fifth_question">What genres are you interested in?</string>
    <string name="i_need_recommendation">No, I need recommendations</string>
    <string name="i_need_reference">No, I need references</string>
    <string name="yes_give_the_book_title">Yes, name the book</string>
    <string name="yes_give_the_book_author">Yes, please state the author</string>
    <string name="yes_give_the_overview">Yes, please provide a brief description</string>
    <string name="no_preference">No preferences</string>
    <string name="star_3">3 stars and above</string>
    <string name="star_4">4 stars and above</string>
    <string name="star_5">5 stars</string>
    <string name="star_6">6 stars and above</string>
    <string name="star_10">10 stars</string>
    <string name="fantasy">Fantasy</string>
    <string name="romance">Romance</string>
    <string name="horror">Horror</string>
    <string name="comedy">Comedy</string>
    <string name="action">Action</string>
    <string name="movie_first_question">What year range of movies are you interested in watching?</string>
    <string name="movie_second_question">What duration of movies do you prefer?</string>
    <string name="movie_third_question">Which movie genres do you like the most?</string>
    <string name="movie_third_question_hint">(Please choose only one genre from this collection: Action, Fantasy, Comedy, Drama, Sci-FI, Horror, Mystery, Thriller, War, Western, Adventure, Animation, Biography, Crime, Music, Romance, Sport)</string>
    <string name="movie_fourth_question">What is the minimum rating you are looking for in a movie? (1–10)</string>
    <string name="movie_fifth_question">Do you want to watch a movie directed by a specific director?</string>
    <string name="movie_sixth_question">Do you want to watch a movie starring a specific actor/actress?</string>
    <string name="movie_seventh_question">What type of movies do you prefer to watch?</string>
    <string name="yes_give_the_movie_title">Yes, please state the title</string>
    <string name="yes_give_the_movie_year">Yes, please state the year</string>
    <string name="yes_give_the_movie_certificate">Yes, please state the certificate</string>
    <string name="yes_give_the_director">Yes, please specify the director\'s name</string>
    <string name="yes_give_the_actor">Yes, please specify the actor/actress\'s name</string>
    <string name="yes_give_the_vote">Yes, please state the number of votes</string>
    <string name="tour_first_question">Do you have the name of a particular tourist spot you want to visit?</string>
    <string name="tour_second_question">Do you have the type of activity or experience you are looking for in a tourist destination?</string>
    <string name="tour_third_question">What category of tourist attractions are you interested in?</string>
    <string name="tour_fourth_question">In which city or area do you plan to look for tourist attractions?</string>
    <string name="tour_fifth_question">Do you have a minimum rating preference for the tourist attraction you are looking for?</string>
    <string name="tour_sixth_question">Do you prefer tourist attractions that have lots of reviews?</string>
    <string name="yes_give_the_tour_name">Yes, please state the name of the place</string>
    <string name="yes_give_the_tour_type">Yes, please state the type of activity</string>
    <string name="culture">Culture</string>
    <string name="amusement_parks">Amusement Parks</string>
    <string name="nature_preserve">Nature Preserve</string>
    <string name="nautical">Nautical</string>
    <string name="shopping_center">Shopping Center</string>
    <string name="worship_place">Worship Place</string>
    <string name="jakarta">Jakarta</string>
    <string name="yogyakarta">Yogyakarta</string>
    <string name="bandung">Bandung</string>
    <string name="semarang">Semarang</string>
    <string name="surabaya">Surabaya</string>
    <string name="no_problem">No problem, even a little review is okay</string>
    <string name="more_than_10_reviews">More than 10 reviews</string>
    <string name="more_than_20_reviews">More than 20 reviews</string>
    <string name="lets_go">Let\'s Go</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="default_web_client_id">666892526458-nsqm8vg63q6fc6214tdm2k5f52re5r10.apps.googleusercontent.com</string>
    <string name="title_survey">Survey</string>
    <string name="title_schedule">Schedule</string>
    <string name="book">Book</string>
    <string name="recommendations">Recommendations</string>
    <string name="see_all">See all</string>
    <string name="survey_stress_title">Stress Test</string>
    <string name="survey_stress_description">Feel free to answer these questions based on your honest so we can measure your stress level accurately!</string>
    <string name="stress_first_question">How many hours do you typically sleep on average? (max 15)</string>
    <string name="stress_second_question">How would you rate the quality of your sleep recently?</string>
    <string name="stress_third_question">How heavy is the activity you have been doing lately, physically or mentally?</string>
    <string name="stress_fourth_question">Which category does your weight fall into?</string>
    <string name="stress_fifth_question">How has your blood pressure been recently?</string>
    <string name="stress_sixth_question">How has your heart rate been recently?</string>
    <string name="stress_seventh_question">How often have you been walking recently?</string>
    <string name="stress_eighth_question">Do you have any sleep disorders?</string>
    <string name="poor">Poor</string>
    <string name="fair">Fair</string>
    <string name="good">Good</string>
    <string name="slightly_active">Slightly Active</string>
    <string name="moderately_active">Moderately Active</string>
    <string name="very_active">Very Active</string>
    <string name="obesity">Obesity</string>
    <string name="overweight">Overweight</string>
    <string name="underweight">Underweight</string>
    <string name="low">Low</string>
    <string name="normal">Normal</string>
    <string name="high">High</string>
    <string name="rarely">Rarely</string>
    <string name="occasionally">Occasionally</string>
    <string name="frequently">Frequently</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="see_result">See Result</string>
    <string name="book_title">book title</string>
    <string name="year">Year</string>
    <string name="parenthesis_open">(</string>
    <string name="parenthesis_close">)</string>
    <string name="genre">Genre</string>
    <string name="author">Author</string>
    <string name="rating">Rating</string>
    <string name="overview">Overview</string>
    <string name="movie">Movie</string>
    <string name="movie_title">Movie Title</string>
    <string name="duration">Duration</string>
    <string name="_10">/ 10</string>
    <string name="travel">Travel</string>
    <string name="your_schedule_here">Your Schedule Here</string>
    <string name="on_going">On Going</string>
    <string name="completed">Completed</string>
    <string name="add_your_activity">Add Your Activity</string>
    <string name="activity_title">Activity Title</string>
    <string name="activity_description">Activity Description</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="add_activity">Add Activity</string>
    <string name="category">Category</string>
    <string name="textview">textView</string>
    <string name="stress_indicator">Stress Indicator</string>
    <string-array name="category_list">
        <item>Book</item>
        <item>Movie</item>
        <item>Travel</item>
    </string-array>
    <string name="current_stress_level">Current Stress Level:</string>
    <string name="none">None</string>
    <string name="check_now">Check Now</string>
    <string name="activities">Activities:</string>
    <string name="date_title">Date:</string>
    <string name="time_title">Time:</string>
    <string name="category_title">Category:</string>
    <string name="description_title">Description</string>
    <string name="last_5_years">Last 5 years</string>
    <string name="last_10_years">Last 10 years</string>
    <string name="last_20_years">Last 20 years</string>
    <string name="any_year">Any year</string>
    <string name="short_less_than_90_minutes">Short (less than 90 minutes)</string>
    <string name="regular_less_than_150_minutes">Regular (less than 150 minutes)</string>
    <string name="long_more_than_150_minutes">Long (more than 150 minutes)</string>
    <string name="movies_that_are_lesser_known">Movies that are lesser-known</string>
    <string name="movies_that_are_talked_about_quite_often">Movies that are talked about quite often</string>
    <string name="popular_movies_that_many_people_know_about">Popular movies that many people know about</string>
    <string name="publish_year">Publish Year</string>
    <string name="vote">Votes</string>
</resources>