<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ui.survey.SurveyFragment" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/survey_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/survey_stress_title"
                android:textColor="@color/blue"
                android:textStyle="bold"
                android:textSize="48sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/survey_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/survey_stress_description"
                android:textColor="@color/text_color_primary"
                android:textAlignment="center"
                android:paddingHorizontal="14dp"
                android:textSize="19sp"
                android:layout_marginTop="42dp"
                app:layout_constraintTop_toBottomOf="@+id/survey_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/stress_first_question"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="44dp"
                android:paddingHorizontal="24dp"
                android:text="@string/stress_first_question"
                android:textColor="@color/text_color_primary"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/survey_description" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/stress_first_question_input_layout"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="26dp"
                android:layout_marginTop="4dp"
                app:layout_constraintTop_toBottomOf="@id/stress_first_question"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintWidth_percent="0.8">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ed_stress_first_question"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:inputType="number"
                    android:textColor="@color/text_color_primary"/>
            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:id="@+id/stress_second_question"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stress_second_question"
                android:textColor="@color/text_color_primary"
                android:paddingHorizontal="24dp"
                android:textSize="14sp"
                android:layout_marginTop="30dp"
                app:layout_constraintTop_toBottomOf="@+id/stress_first_question_input_layout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <RadioGroup
                android:id="@+id/stress_second_question_radio_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/stress_second_question"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="24dp"
                android:layout_marginTop="14dp">

                <RadioButton
                    android:id="@+id/stress_second_question_option1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/poor"
                    android:textColor="@color/text_color_primary"/>

                <RadioButton
                    android:id="@+id/stress_second_question_option2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fair"
                    android:textColor="@color/text_color_primary"/>

                <RadioButton
                    android:id="@+id/stress_second_question_option3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/good"
                    android:textColor="@color/text_color_primary"/>
            </RadioGroup>

            <TextView
                android:id="@+id/stress_third_question"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stress_third_question"
                android:textColor="@color/text_color_primary"
                android:paddingHorizontal="24dp"
                android:textSize="14sp"
                android:layout_marginTop="30dp"
                app:layout_constraintTop_toBottomOf="@+id/stress_second_question_radio_group"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <RadioGroup
                android:id="@+id/stress_third_question_radio_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/stress_third_question"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="24dp"
                android:layout_marginTop="14dp">

                <RadioButton
                    android:id="@+id/stress_third_question_option1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/slightly_active"
                    android:textColor="@color/text_color_primary"/>

                <RadioButton
                    android:id="@+id/stress_third_question_option2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/moderately_active"
                    android:textColor="@color/text_color_primary"/>

                <RadioButton
                    android:id="@+id/stress_third_question_option3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/very_active"
                    android:textColor="@color/text_color_primary"/>
            </RadioGroup>

            <TextView
                android:id="@+id/stress_fourth_question"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stress_fourth_question"
                android:textColor="@color/text_color_primary"
                android:paddingHorizontal="24dp"
                android:textSize="14sp"
                android:layout_marginTop="30dp"
                app:layout_constraintTop_toBottomOf="@+id/stress_third_question_radio_group"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <RadioGroup
                android:id="@+id/stress_fourth_question_radio_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/stress_fourth_question"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="24dp"
                android:layout_marginTop="14dp">

                <RadioButton
                    android:id="@+id/stress_fourth_question_option1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/obesity"
                    android:textColor="@color/text_color_primary"/>

                <RadioButton
                    android:id="@+id/stress_fourth_question_option2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/overweight"
                    android:textColor="@color/text_color_primary"/>

                <RadioButton
                    android:id="@+id/stress_fourth_question_option3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/normal"
                    android:textColor="@color/text_color_primary"/>

                <RadioButton
                    android:id="@+id/stress_fourth_question_option4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/underweight"/>
            </RadioGroup>

            <TextView
                android:id="@+id/stress_fifth_question"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stress_fifth_question"
                android:textColor="@color/text_color_primary"
                android:paddingHorizontal="24dp"
                android:textSize="14sp"
                android:layout_marginTop="30dp"
                app:layout_constraintTop_toBottomOf="@+id/stress_fourth_question_radio_group"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <RadioGroup
                android:id="@+id/stress_fifth_question_radio_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/stress_fifth_question"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="24dp"
                android:layout_marginTop="14dp">

                <RadioButton
                    android:id="@+id/stress_fifth_question_option1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/low"
                    android:textColor="@color/text_color_primary"/>

                <RadioButton
                    android:id="@+id/stress_fifth_question_option2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/normal"
                    android:textColor="@color/text_color_primary"/>

                <RadioButton
                    android:id="@+id/stress_fifth_question_option3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/high"
                    android:textColor="@color/text_color_primary"/>
            </RadioGroup>

            <TextView
                android:id="@+id/stress_sixth_question"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stress_sixth_question"
                android:textColor="@color/text_color_primary"
                android:paddingHorizontal="24dp"
                android:textSize="14sp"
                android:layout_marginTop="30dp"
                app:layout_constraintTop_toBottomOf="@+id/stress_fifth_question_radio_group"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <RadioGroup
                android:id="@+id/stress_sixth_question_radio_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/stress_sixth_question"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="24dp"
                android:layout_marginTop="14dp">

                <RadioButton
                    android:id="@+id/stress_sixth_question_option1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/low"
                    android:textColor="@color/text_color_primary"/>

                <RadioButton
                    android:id="@+id/stress_sixth_question_option2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/normal"
                    android:textColor="@color/text_color_primary"/>

                <RadioButton
                    android:id="@+id/stress_sixth_question_option3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/high"
                    android:textColor="@color/text_color_primary"/>
            </RadioGroup>

            <TextView
                android:id="@+id/stress_seventh_question"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stress_seventh_question"
                android:textColor="@color/text_color_primary"
                android:paddingHorizontal="24dp"
                android:textSize="14sp"
                android:layout_marginTop="30dp"
                app:layout_constraintTop_toBottomOf="@+id/stress_sixth_question_radio_group"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <RadioGroup
                android:id="@+id/stress_seventh_question_radio_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/stress_seventh_question"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="24dp"
                android:layout_marginTop="14dp">

                <RadioButton
                    android:id="@+id/stress_seventh_question_option1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rarely"
                    android:textColor="@color/text_color_primary"/>

                <RadioButton
                    android:id="@+id/stress_seventh_question_option2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/occasionally"
                    android:textColor="@color/text_color_primary"/>

                <RadioButton
                    android:id="@+id/stress_seventh_question_option3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/frequently"
                    android:textColor="@color/text_color_primary"/>
            </RadioGroup>

            <TextView
                android:id="@+id/stress_eighth_question"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stress_eighth_question"
                android:textColor="@color/text_color_primary"
                android:paddingHorizontal="24dp"
                android:textSize="14sp"
                android:layout_marginTop="30dp"
                app:layout_constraintTop_toBottomOf="@+id/stress_seventh_question_radio_group"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <RadioGroup
                android:id="@+id/stress_eighth_question_radio_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/stress_eighth_question"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="24dp"
                android:layout_marginTop="14dp">

                <RadioButton
                    android:id="@+id/stress_eighth_question_option1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/yes"
                    android:textColor="@color/text_color_primary"/>

                <RadioButton
                    android:id="@+id/stress_eighth_question_option2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no"
                    android:textColor="@color/text_color_primary"/>
            </RadioGroup>

            <Button
                android:id="@+id/stress_survey_submit_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/see_result"
                android:textStyle="bold"
                android:textSize="19sp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="90dp"
                android:layout_marginHorizontal="20dp"
                android:backgroundTint="@color/purple"
                app:layout_constraintTop_toBottomOf="@id/stress_eighth_question_radio_group"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:progressTint="@color/purple"
        android:layout_gravity="center"
        android:visibility="gone"/>
</FrameLayout>